<resources>
    <string name="app_name">Get Chat Go</string>
    <string name="write_message_hint">Write message...</string>
    <string name="start_a_chat">Start a chat</string>
    <string name="description_txt">Get Chat Go app is a great way to meet new friends. When you use this app, you are paired randomly with another person to talk one-on-one. To help you stay safe, chats are anonymous unless you tell someone who you are (not recommended!), and you can stop a chat at any time. See our Terms of Service and Community Guidelines for more info about the do’s and don’ts in using this app. Users are solely responsible for their behavior while using this app.</string>
    <string name="i_agree_to_the_terms_conditions_privacy_policy_and_community_guidelines"><![CDATA[I agree to the terms & conditions, privacy policy and community guidelines.]]></string>
    <string name="login">Login</string>
    <string name="talk_with_strangers">Talk with strangers!</string>
    <string name="discover">Discover</string>
    <string name="account">Account</string>
    <string name="chat">Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mask_character">\u2022</string>
    <string name="style_square">square_box</string>
    <string name="style_rounded">rounded_box</string>
    <string name="style_underline">underline</string>
    <string name="style_rounded_underline">rounded_underline</string>
    <string name="prevent_anyone_from_reading_your_messages_by_setting_up_a_password_for_the_app">Prevent anyone from reading your messages by setting up a password for the app</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_info">Edit info</string>
    <string name="update">Update</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="upload_photo">Upload Photo</string>
</resources>