<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/heading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/dull_white"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/login_heading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/semibold"
        android:text="Login"
        android:textColor="@color/dull_white"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/username_edit_text"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/bold"
        android:padding="8dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/input_drawable"
        android:fontFamily="@font/regular"
        android:gravity="start|top"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:padding="16dp"
        android:textColor="@color/dull_white"
        android:textColorHint="@color/secondary_text_color_night"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/input_drawable"
        android:fontFamily="@font/regular"
        android:gravity="start|top"
        android:hint="Password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="16dp"
        android:textColor="@color/dull_white"
        android:textColorHint="@color/secondary_text_color_night"
        app:layout_constraintBottom_toTopOf="@+id/create_account_text" />

    <TextView
        android:id="@+id/dont_have_an_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/dull_white"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn" />

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/semibold"
        android:gravity="center"
        android:text="Create account"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/dont_have_an_account"
        app:layout_constraintStart_toEndOf="@+id/dont_have_an_account"
        app:layout_constraintTop_toTopOf="@+id/dont_have_an_account" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/login_heading_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_tv"
        app:srcCompat="@drawable/mobile_login" />


</androidx.constraintlayout.widget.ConstraintLayout>